<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/repeatWords"
        android:backgroundTint="#86322777"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:text="@string/repeatWords"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addWords"
        android:backgroundTint="#86322777"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:text="@string/addWords"
        app:layout_constraintBottom_toTopOf="@+id/repeatWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/showList"
        android:backgroundTint="#86322777"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:text="@string/showList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeatWords" />

    <TextView
        android:id="@+id/ourNameApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameApp"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/repeatWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>